get starts by route and round ids endpoint